# REST-API

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  postman_collection.json  pyproject.toml
student_api/: settings.py  urls.py  wsgi.py
students/: models.py  serializers.py  tests.py  urls.py  views.py
students/migrations/: 0001_initial.py
